# go-webrtp

./: .gitignore  CLAUDE.md  README.md  go.mod  go.sum  h264_encode_common.go  h264_encode_darwin.go  h264_encode_darwin.m  h264_encode_linux.go  h264_encode_stub.go  h264_encode_windows.cpp  h264_encode_windows.go  handler.go  handler_test.go  hub_test.go  keyframe_calibration.go  keyframe_image.go  keyframe_native_decoder.go  keyframe_native_decoder_darwin.go  keyframe_native_decoder_darwin.m  keyframe_native_decoder_debug.go  keyframe_native_decoder_stub.go  keyframe_native_decoder_windows.cpp  keyframe_native_decoder_windows.go  keyframe_native_encode_stub.go  keyframe_native_encode_windows.cpp  keyframe_native_encode_windows.go  keyframe_native_h264_encode_stub.go  keyframe_native_h264_encode_windows.go  keyframe_publish.go  keyframe_quality_default.go  keyframe_quality_windows.go  keyframe_renderer.go  keyframe_renderer_webgpu.go  keyframe_renderer_webgpu_stub.go  keyframe_sink.go  keyframe_worker.go  manual_h264_bridge.go  manual_h264_bridge_test.go  mqtt_publisher.go  (+45 more)
.claude/agents/: subagent.md
client/javascript/: README.md  package-lock.json  package.json  tsconfig.json
client/python/: README.md  main.py  main_mqtt_keyframe.py  main_raw.py  pyproject.toml
client/python/src/webrtp/: __init__.py  client.py
client/react-webrtp/: README.md  package.json  tsconfig.json  vite.config.ts
resource/: release.sh
streamcore/: manager.go  manager_test.go  shared_source.go  usb_ffmpeg.go
usbauto/: encoder.go  options.go  probe.go  usbauto.go  usbauto_test.go
(+45 files in other folders)
