[project]
name = "connectedtechco-webrtp"
version = "1.0.0"
description = "WebRTP WebSocket client for receiving video streams"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "websocket-client>=1.0.0",
    "av>=12.0.0",
    "opencv-python>=4.5.0",
]

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/webrtp"]

[tool.uv]
dev-dependencies = []
